# CytoTerk

./: CHANGELOG.md  README.md  auto_convert.py  demo_analysis.ipynb  demo_analysis.py  demo_bulk_alignment.py  demo_cci_arcs.py  demo_cross_species.py  demo_doublets.py  demo_lineage.py  demo_multiome.py  demo_multiome_integration.py  demo_new_features.py  generate_demo_data.py  generate_notebook.py  generate_walkthrough_figs.py  pyproject.toml  test_crash.py  test_crash2.py  test_crash3.py  test_crash_randomized.py  test_min.py  test_script.sh  test_silent.py  test_svd.py
demo_figs/: demo_multiome_report.md  demo_report.md  differential_expression.csv  differential_expression_pbmc3k.csv  ordering_effect_genes.csv
docs/: API.md  tutorial.md
src/sccytotrek/: __init__.py  plotting.py  plotting_advanced.py  plotting_monocle.py  plotting_tree.py
src/sccytotrek/clustering/: __init__.py  alternative.py  nmf.py
src/sccytotrek/datasets/: __init__.py  io.py  mock_data.py  multiome_mock.py
src/sccytotrek/grn/: __init__.py  perturbation.py  tf_enrichment.py
src/sccytotrek/integration/: __init__.py  bulk.py  dl_integration.py  harmony.py  species.py
src/sccytotrek/interaction/: __init__.py  ccc.py  drugbank.py  umap_arcs.py
src/sccytotrek/lineage/: __init__.py  imputation.py  visualization.py
src/sccytotrek/multiome/: __init__.py  integration.py  integration_v2.py
src/sccytotrek/pathway/: __init__.py  enrichment.py  metabolism.py
src/sccytotrek/plotting/: __init__.py  style.py  volcano.py
tests/: test_plotting.py  test_preprocessing.py  test_tools.py
(+19 files in other folders)
